--- a/src/components/Test/Test.module.css
+++ b/src/components/Test/Test.module.css
@@ -10,4 +10,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 10px;
+  justify-content: center;
+  align-items: center;
+  row-gap: 114px;
 }
