--- a/src/components/LoginPage/loginPage.module.css
+++ b/src/components/LoginPage/loginPage.module.css
@@ -2,19 +2,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgb(58, 112, 165);
-  animation: background 15s infinite alternate;
-  box-shadow: 0 -200px 100px -120px rgb(163, 137, 229) inset;
+  background: rgb(220, 188, 227);
+  /* animation: background 15s infinite alternate; */
+  /* box-shadow: 0 -200px 100px -120px rgb(163, 137, 229) inset; */
   height: 100vh;
 }
 
 .main {
-  border-radius: 100px;
-  height: 70vh;
+  /* border-radius: 100px;
+  height: 70vh; */
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+}
+
+.button:hover{
+  background-color: purple;
 }
 
 .authInput {
@@ -22,6 +26,7 @@
   flex-direction: column;
   row-gap: 20px;
   width: 340px;
+  margin-bottom: 180px;
 }
 
 .mainText {
@@ -55,6 +60,6 @@
 @keyframes background {
   10% {
     background: skyblue;
-    box-shadow: 0 -200px 100px -100px rgb(50, 140, 205) inset;
+    /* box-shadow: 0 -200px 100px -100px rgb(50, 140, 205) inset; */
   }
 }
