--- a/src/components/UI/TestCard/TestCard.module.css
+++ b/src/components/UI/TestCard/TestCard.module.css
@@ -1,10 +1,11 @@
 .errorMessage{
     background-color: #dfb2b2;
     text-align: center;
-    width: 140px;
+    width: 170px;
     border-radius: 10px;
     margin-left: 130px;
     margin-top: 24px;
     margin-bottom: 25px;
     padding: 18px;
+    /* font-family: Open Sans; */
 }
